* Footer colour contrast fix

--- a/src/app/components/global/footer/footer-nav/footer-nav.scss
+++ b/src/app/components/global/footer/footer-nav/footer-nav.scss
@@ -16,8 +16,8 @@ ul{
     padding: 0;
     flex: 0 0 50%;
     a{
-      font-weight: 700;
-      font-size: 1.25rem;
+      font-weight: 400;
+      font-size: 1.5rem;
     }
   }
 }
