--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -38,3 +38,8 @@ header{
   z-index: 50;
   background-color: $white;
 }
+
+footer{
+  padding: 15px 0;
+  // background-color: var(--dmg-monochrome-185);
+}
